--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
- 
+  <head>
     <title>Portafolio</title>
-    <meta charset="UTF-8">
- 
+    <meta charset="UTF-8" />
+  </head>
+
+  <body>
+    <!-- Cabeçalho -->
+    <header>
+      <h1 id="topo">BEM-VINDO AO MEU PORTAFOLIO</h1>
+      <figure>
+        <img
+          src="./img/4ef43f59-f3cc-4e98-950a-8104ee8e5c3e.jpg"
+          width="300"
+          alt="Anibalpresent"
+        />
+        <figcaption>
+          <strong>Anibal Jimenez</strong>, Front-End em Formaçaõ
+        </figcaption>
+      </figure>
+      <h2>Aqui você vai encontrar:</h2>
+      <nav>
+        <ul>
+          <li><a href="#SobreMim"> Sobre Mim</a></li>
+          <li><a href="#fotf">Formação, Objetivos e Trabalhos Feitos</a></li>
+          <li><a href="#Formação"> Formação</a></li>
+          <li><a href="#Objetivos"> Objetivos</a></li>
+          <li><a href="#Trabalhos Feitos"> Trabalhos Feitos</a></li>
+          <li><a href="#Contato"> Contatos</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
+</html>
