Formacao, objetivos, trabalhos feitos

--- a/index.html
+++ b/index.html
@@ -31,5 +31,69 @@
         </ul>
       </nav>
     </header>
+
+    <!-- Conteúdo Principal-->
+    <main>
+      <h2 id="SobreMim">Sobre Mim</h2>
+      <p>
+        Olá pessoal meu nome é Anibal Jimenez, sou venezuelano, junto com minha
+        esposa chegamos ao Brasil no ano 2018, com muita vontade de crescer
+        tanto pessoal como professionalmente, atualmente meu pais afronta uma
+        crisis politica que tem afetado muito nossos sonhos professionais e
+        nossa saude, essa mesma crisis me impulsou a sair e buscar novos
+        horizontes neste pais. <br /><br />
+
+        Desde que cheguei, brasil me abriu ás portas com o trabalho, pasando por
+        distintos departamentos, desde a area de manutenção em um clube,
+        atendente de loja e por ultimo ajudante de cozinha em um restaurante,
+        graças a isso, conseguí me manter e ajudar a minha familia, só que ainda
+        faltava cumprir meu sonho de ser um professional. <br /><br />
+        Assim que conheci a <strong>Toti Diversidade</strong> me interesei em
+        conhecer o mundo da programação e fiz o proceso seletivo, só que fiquei
+        selecionado só na segunda tentativa. Hoje posso dizer que sou
+        Professional em formação na área da TI, com muito caminho por recorrer
+        mais com uma vontade grande de aprender cada dia mais e assim ser um
+        exelente professional.<br />
+      </p>
+    </main>
+
+<!--section-->
+    <section>
+        <h2 id="fotf">Formaçao, Objetivos, Trabalhos feitos</h2>
+    </section>
+    <section>
+        <h3 id="Formação">Formação</h3>
+        <p>
+            <ul>
+                <li>Curso "Introduçao á Linguagem html" - "Alfahelix" EScola de Computação</li>
+                <li>Me aprimorando como desenvolvedor web <strong>"Front-End"</strong> na <i>"Toti Diversidade"</i></li>
+            </ul>
+        </p>
+    </section>
+    <section>
+        <h3 id="Objetivos">Objetivos</h3>
+        <p>
+            Tenho como objetivo me tornar um professional na minha area de TI, crescer cada dia neste ambito é o meu foco, poder ajudar a quem precise e aportar boas ideias no mercado de trabalho. <br><br> 
+            Ter uma estabilidade pessoal laboral e financeira para mim e minha familia é uma das metas que mais anhelo agradeço muito a TOTI por me dar a oportunidad de iniciar o caminho para alcanzar os meus objetivos.
+        </p>
+    </section>
+    <section>
+        <h3 id="Trabalhos Feitos"> Trabalhos Feitos</h3>
+        <p>A continuaçaõ deixo um link do meus <strong>primeiros exercicios em html</strong>:</p>
+            <ul>
+                <li>
+                     <a 
+                        href="https://github.com/anibaljm/Curso_Git.git"
+                        target="_blank"
+                        rel="noopener">Exercicios da Aulas do Git</a>
+                </li>
+                <li>
+                    <a
+                        href="https://github.com/anibaljm/exercicio_html.git"
+                        target="_blank"
+                        rel="noopener"> Receita de strogonoff só com html</a>
+                </li>
+            </ul>
+    </section>
   </body>
 </html>
