--- a/index.html
+++ b/index.html
@@ -95,5 +95,30 @@
                 </li>
             </ul>
     </section>
-  </body>
+    <hr>
+ <!-- Rodapé -->
+    <footer>
+        <p>
+           <a href="#topo">Voltar ao Topo</a>
+        </p>
+        <h3 id="Contato">Sigue-me na minhas redes socias:</h3>
+        <p>
+            <a
+            href="https://github.com/anibaljm/"
+            target="_blank"
+            rel="noopener">GitHub</a> /
+            <a href="https://www.linkedin.com/in/anibal-jose-jimenez-mendoza-6b5745251/"
+            target="_blank"
+            rel="noopener">Linkedin</a> /
+            <a href="https://facebook.com/Maclon"
+            target="_blank"
+            rel="noopener">Facebook</a> / 
+            <a href="https://www.instagram.com/anibalj2004/"
+            target="_blank"
+            rel="noopener"> Instagram</a> / 
+        </p>
+        &copy;2020 Anibal Jimenez
+    <hr>
+    </footer>
+</body>
 </html>
